[package]
name = "xtalk_flow_control"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
log = { workspace = true }

# ethers
ethers = { workspace = true }

# l1x-sdk dependencies
l1x-sdk = { workspace = true }
